--- a/portifolio2/css/style.css
+++ b/portifolio2/css/style.css
@@ -29,7 +29,8 @@ header {
     color: white;
     display: grid;
     height: 70px;
-    transition: all ease-in-out 0.5s;
+    padding-right: 7px;
+    transition: all ease-in-out 0.3s;
 }
 
 #menu1 {/*menu button position and style*/
@@ -43,6 +44,7 @@ header {
     padding: 7px;
     border-radius: 4px;
     cursor: pointer;
+    transform: translateY(-5px);
 }
 
 #menu1 > p:hover {/*When p is on hover*/
@@ -61,7 +63,7 @@ header {
 }
 
 .tamanhoFull { /*Menu height full*/
-    height: 550px;
+    height: 360px;
 }
 
 .hidden { /*Menu hidden*/
@@ -72,16 +74,15 @@ header {
     display: block;
     color: white;
     text-decoration: none;
-    font-size: 14px;
-    line-height: 1.2em;
-    padding: 15px;
-    margin: 18px;
+    font-size: 13px;
+    padding: 12px;
+    margin-left: 7px;
+    
     border-radius: 10px;
     
 }
 
 #menuNav > ol > a:hover { /*Style Links when hover on*/
     background-color: black !important;
-    
     border-radius: 7px;
 }
