--- a/portifolio2/css/style.css
+++ b/portifolio2/css/style.css
@@ -21,6 +21,7 @@
 body {
   width: 100vw;
   font-family: Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
 }
 
 header {
@@ -86,4 +87,26 @@ header {
   border-radius: 7px;
 }
 
-/*Links concluidos agora é a parte do conteúdo príncipal*//*# sourceMappingURL=style.css.map */
+/*Links concluidos agora é a parte do conteúdo príncipal*/
+#imagem1 {
+  background-image: url(../imagens/paisagem1.jpg);
+  height: 1200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+}
+
+#logo {
+  width: 100%;
+  display: grid;
+  background-color: green;
+  justify-items: center;
+  align-items: start;
+}
+
+#logo > img {
+  height: 10%;
+  width: 15.5%;
+  background-color: #748752;
+}/*# sourceMappingURL=style.css.map */
