--- a/portifolio2/css/style.css
+++ b/portifolio2/css/style.css
@@ -2,7 +2,8 @@
 * {
   padding: 0px;
   margin: 0px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 :root {
@@ -20,59 +21,72 @@
 
 body {
   width: 100vw;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial,  sans-serif;
   overflow-x: hidden;
 }
 
 header {
   background-color: var(--medinat2);
   color: white;
+  display: -ms-grid;
   display: grid;
   height: 70px;
   padding-right: 7px;
+  -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
 }
 
-#menu1 { /*menu button position and style*/
+#menu1 {
+  /*menu button position and style*/
   text-align: right;
   margin: 20px;
 }
 
-#menu1 > p { /*p Style*/
+#menu1 > p {
+  /*p Style*/
   display: inline-block;
   font-size: 15px;
   padding: 7px;
   border-radius: 4px;
   cursor: pointer;
-  transform: translateY(-5px);
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
   -webkit-user-select: none;
      -moz-user-select: none;
+      -ms-user-select: none;
           user-select: none;
 }
 
-#menu1 > p:hover { /*When p is on hover*/
+#menu1 > p:hover {
+  /*When p is on hover*/
   background-color: var(--medinat0);
 }
 
-.menu1On { /*Menu buttom*/
+.menu1On {
+  /*Menu buttom*/
   background-color: var(--medinat0);
 }
 
-#menu1 > p > span { /*Style burguer menu*/
+#menu1 > p > span {
+  /*Style burguer menu*/
   font-size: 1.2em;
-  transform: translate(-1.2px, 3px);
+  -webkit-transform: translate(-1.2px, 3px);
+          transform: translate(-1.2px, 3px);
   padding-left: 2px;
 }
 
-.tamanhoFull { /*Menu height full*/
+.tamanhoFull {
+  /*Menu height full*/
   height: 360px;
 }
 
-.hidden { /*Menu hidden*/
+.hidden {
+  /*Menu hidden*/
   display: none !important;
 }
 
-#menuNav > ol > a { /*Style Links*/
+#menuNav > ol > a {
+  /*Style Links*/
   display: block;
   color: white;
   text-decoration: none;
@@ -82,7 +96,8 @@ header {
   border-radius: 10px;
 }
 
-#menuNav > ol > a:hover { /*Style Links when hover on*/
+#menuNav > ol > a:hover {
+  /*Style Links when hover on*/
   background-color: black !important;
   border-radius: 7px;
 }
@@ -93,8 +108,12 @@ header {
   height: 1200px;
   background-repeat: no-repeat;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #logo {
@@ -109,14 +128,26 @@ header {
   width: 120px;
   top: 8%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   position: absolute;
 }
 
 #alpha {
   width: 20px;
-  top: 8.5%;
-  left: 56%;
-  transform: translate(-50%, -50%);
+  top: 15.5%;
+  left: 33%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   position: absolute;
-}/*# sourceMappingURL=style.css.map */
+}
+
+#lambda {
+  width: 20px;
+  top: 15.5%;
+  left: 33%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  position: absolute;
+}
+/*# sourceMappingURL=style.css.map */
