--- a/portifolio2/css/style.css
+++ b/portifolio2/css/style.css
@@ -151,13 +151,13 @@ header {
 .testAlpha {
   animation-delay: 2s;
   animation-name: animationAlphaF;
-  animation-duration: 7s;
+  animation-duration: 4s;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
 }
 
 .lefs {
-  animation-delay: 5.5s;
+  animation-delay: 4.5s;
   animation-name: lefs;
   animation-duration: 4s;
   animation-timing-function: ease;
@@ -166,7 +166,14 @@ header {
 
 .secondPosition {
   animation-name: SP;
-  animation-duration: 4s;
+  animation-duration: 2s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+.alphaReturn {
+  animation-name: returnAlpha;
+  animation-duration: 3s;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
 }
@@ -208,12 +215,25 @@ header {
   }
   98% {
     top: 15.25%;
-    left: 40%;
-    opacity: 18%;
+    left: 38%;
+    opacity: 15%;
   }
   100% {
     top: 15.25%;
-    left: 38%;
+    left: 36%;
     opacity: 0%;
+  }
+}
+@keyframes returnAlpha {
+  from {
+    width: 35.5px;
+    top: 15.25%;
+    left: 38%;
+  }
+  to {
+    width: 22.5px;
+    top: 8.5%;
+    left: 56%;
+    transform: translate(-50%, -50%);
   }
 }/*# sourceMappingURL=style.css.map */
