--- a/portifolio2/css/style.css
+++ b/portifolio2/css/style.css
@@ -111,6 +111,11 @@ header {
   left: 50%;
   transform: translate(-49%, -50%);
   position: absolute;
+  transition: left 0.5s;
+}
+
+.apresentationP {
+  left: 22% !important;
 }
 
 #alpha {
