--- a/portifolio2/css/style.scss
+++ b/portifolio2/css/style.scss
@@ -118,11 +118,11 @@ header {
     left: 50%;
     transform: translate(-49%, -50%);
     position: absolute;
-    transition: left 0.5s;
+    transition: opacity 0.5s;
 }
 
 .apresentationP {
-    left: 22% !important;
+    opacity: 0%;
 }
 
 #alpha {
