--- a/portifolio2/css/style.scss
+++ b/portifolio2/css/style.scss
@@ -94,10 +94,12 @@ header {
 /*Links concluidos agora é a parte do conteúdo príncipal*/
 
 #imagem1 {
-    background-image: url(../imagens/paisagem1.jpg);
-    height: 1200px;
+    background-image: url(../imagens/paisagem2.jpg);
+    height: 750px;
+    padding-top: 20px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: left center;
     display: flex;
     justify-content: center;
     
@@ -106,7 +108,6 @@ header {
 #logo {
    width: 400px;
    display: block;
-   background-color: green;
    position: relative;
 }
 
@@ -118,7 +119,7 @@ header {
     left: 50%;
     transform: translate(-49%, -50%);
     position: absolute;
-    transition: opacity 0.5s;
+    transition: opacity 0.8s;
 }
 
 .apresentationP {
@@ -143,7 +144,7 @@ header {
 
 #lambda {
     width: 48px;
-    top: 15.0%;
+    top: 18.0%;
     left: 46.5%;
     // top: 8.5%;
     // left: 56%;
@@ -154,7 +155,7 @@ header {
 
 #epsilon {
     width: 47.5px;
-    top: 15.0%;
+    top: 18.0%;
     left: 54%;
     // top: 8.5%;
     // left: 56%;
@@ -165,7 +166,7 @@ header {
 
 #phi {
     width: 47px;
-    top: 15.5%;
+    top: 18.5%;
     left: 63%;
     // top: 8.5%;
     // left: 56%;
@@ -218,17 +219,17 @@ header {
 @keyframes animationAlphaF {
     50% {
         width: 35.5px;//animation 1
-        top: 15.25%;//animation 1
+        top: 18.25%;//animation 1
         left: 65%;//animation 1
     }
     70% {
         width: 35.5px;//animation F
-        top: 15.25%;//animation F
+        top: 18.25%;//animation F
         left: 38%;//animation F
     }
     100% {
         width: 35.5px;//animation F
-        top: 15.25%;//animation F
+        top: 18.25%;//animation F
         left: 38%;//animation F
     }
 }
@@ -258,13 +259,13 @@ header {
         opacity: 28%;
     }
     98% {
-        top: 15.25%;//animation 1
+        top: 18.25%;//animation 1
         left: 38%;//animation 1
         opacity: 15%;
     }
 
     100% {
-        top: 15.25%;//animation 1
+        top: 18.25%;//animation 1
         left: 36%;//animation 1
         opacity: 0%;
     }
@@ -273,7 +274,7 @@ header {
 @keyframes returnAlpha {
     from {
         width: 35.5px;//animation F
-        top: 15.25%;//animation F
+        top: 18.25%;//animation F
         left: 38%;//animation F
     }
     
