--- a/portifolio3/css/style.scss
+++ b/portifolio3/css/style.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 * {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
     border: none;
     
@@ -101,4 +101,48 @@ header {
 
 /*Links concluidos agora é a parte do conteúdo príncipal*/
 
+main {
+    display: block;
+    
+}
 
+.home-main-banner {
+    background: url(../imagens/background.jpg) top no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding-top: 50px;
+    position: relative;
+}
+
+
+#alpha {
+    position: absolute;
+    background: url(../imagens/alpha.png) center no-repeat;
+    background-size: cover;
+    width: 15%;
+    height: 90px;
+    top: 20px;
+    left: 10%;
+}
+
+
+
+
+.h1{
+    text-transform: none;
+    font-size: 50px;
+    margin-bottom: 0.5rem;
+    font-weight: 500px;
+}
+
+
+
+p {
+    margin-bottom: 1rem;
+    text-align: justify;
+    font-size: 14px;
+}
+
+.skills {
+
+}
