--- a/portifolio3/css/style.css
+++ b/portifolio3/css/style.css
@@ -6,34 +6,16 @@
   border: none;
 }
 
-:root {
-  --tseva0: #AAA8AD;
-  --tseva1: #59595B;
-  --tseva2: #3F3E3C;
-  --tseva3: #1E1F23;
-  --tseva4: #0D0D0D;
-  --iom0: #1242B3;
-  --iom1: #334A80;
-  --iom2: #0A2666;
-  --iom3: #4768B3;
-  --iom4: #195EFF;
-  --medinat0: #0A2666;
-  --medinat1: #B32E12;
-  --medinat2: #0036B2;
-  --medinat3: #77B312;
-  --medinat4: #426605;
-}
-
 body {
   width: 100vw;
   font-family: Helvetica, Arial, sans-serif;
   overflow-x: hidden;
-  background-image: linear-gradient(to top, var(--iom0), var(--iom2));
+  background-image: linear-gradient(to top, #1242B3, #0A2666);
   background-attachment: fixed;
 }
 
 header {
-  background-image: linear-gradient(to bottom, var(--iom0), var(--iom2));
+  background-image: linear-gradient(to bottom, #1242B3, #0A2666);
   color: white;
   display: grid;
   height: 70px;
@@ -59,11 +41,11 @@ header {
 }
 
 #menu1 > p:hover { /*When p is on hover*/
-  background-color: var(--medinat0);
+  background-color: #0A2666;
 }
 
 .menu1On { /*Menu buttom*/
-  background-color: var(--medinat0);
+  background-color: #0A2666;
 }
 
 #menu1 > p > span { /*Style burguer menu*/
@@ -110,7 +92,6 @@ main {
 }
 
 .alfbt {
-  width: 200px;
   border: 2px solid black;
   position: absolute;
   display: flex;
