--- a/portifolio3/css/style.scss
+++ b/portifolio3/css/style.scss
@@ -3,7 +3,7 @@
 @import "./_tzevaim.scss";
 @import "./_variables.scss";
 @import "./_keyframes.scss";
-
+@import "./_animations.scss";
 
 * {
     padding: 0;
@@ -116,12 +116,9 @@ main {
     
 }
 
-.alfbt-animation1 { //Vai ser adicionado ao carregar o navegado, pelo JS
-    animation: animation-alfbt 1.5s ease forwards;
-    
-}
 
-#alpha {
+
+.alpha {
     background: url(../imagens/alpha.png) center no-repeat;
     background-size: cover;
     width: 44px;
@@ -129,27 +126,31 @@ main {
     margin-top: 5px;
 }
 
-#lambda {
+.lambda {
     background: url(../imagens/lambda.png) center no-repeat;
     background-size: cover;
     width: 49.5px;
     height: 45px;
     margin-left: 4px;
+    opacity: 0%;
 }
 
-#epsilon {
+.epsilon {
     background: url(../imagens/epsilon.png) center no-repeat;
     background-size: cover;
     width: 49.5px;
     height: 45px;
+    opacity: 0%;
 }
 
-#phi {
+.phi {
     background: url(../imagens/phi.png) center no-repeat;
     background-size: cover;
     width: 49.5px;
     height: 45px;
     margin-top: 8px;
+    opacity: 0%;
+    transition: opacity 1s ease;
 }
 
 .h1{
